--- a/js04.html
+++ b/js04.html
@@ -2,6 +2,7 @@
     //기본적으로 const사용
     //값을 변경해야되면 const->let으로 변경
     //함수 스코프를 사용해야되면 let->var로 변경 (주의)
+    //const result=false; <ㅡ const쓰면 값 변경안되므로 let으로 변경
     let result=false;
     result=confirm("확인해주세요.");
     if(result)
