--- a/js17-popup-parent.html
+++ b/js17-popup-parent.html
@@ -38,7 +38,7 @@
         popup=window.open(
             "js17-popup-child.html",
             "popup",
-            "width=500, height=400"
+            "width=500, height=400 left=200, top=200, resizable=no"
         );
     });
 
